Modify as per findbugs suggestion Method invokes inefficient Number constructor; use static valueOf instead